# v2ray-tools

./: DNS.puzzle  README.md  change_v2ray_server.fish  convert_to_test_connectivitity.py  convert_to_tproxy.py  convert_to_tproxy.py.backup  fix-iptables.sh  flake.nix  gai.conf  outbounds.template  outboundsToMellow.py  pyproject.toml  reset-iptables.sh  ruleset.nft  set-iptables-test.sh  set-iptables.sh  set-iptables.sh.backup  set-route.sh  sysctl.conf  test_connectivity.example  test_connectivity.py  tls_shunt_installer.sh  tproxy-test.json.old  tproxy.example  tproxy.example.backup  tproxy_smartdns.example  v2ray.sleep  v2ray_update_servers.py  v2t.conf  v2t.py  vmess2json.py
conf.d/: 02_dns.json  03_routing.json  05_inbounds.json
